--- a/assets/styles.css/estilos.css
+++ b/assets/styles.css/estilos.css
@@ -1,16 +1,17 @@
 div{
     border: rgb(87, 86, 93);
-    padding: 10px;
+    padding: 20px;
     margin: 10px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    background-color:rgb(211, 195, 250);
+    background-color:rgb(214, 214, 214);
 }	
 
 #header{
     margin-bottom: 5px;
     color: rgb(118, 118, 118);
     padding: 30px;
+    text-align: center;
 }
 
 #nav {
@@ -55,11 +56,28 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
+#but {
     padding: 10px 20px;
     font-size: 16px; 
     border: none;
     border-radius: 8px; 
-    background-color: #d9bc94; 
+    background-color: #8ba6a4; 
     color: rgb(255, 255, 255);
 }
+
+form {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(183, 182, 181);
+    font-weight: 200;
+    margin: 10px;
+    padding: 10px;
+}
+
+#foto {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    justify-content: center;
+    width: fit-content;
+    margin: auto;
+}
+
